# control-trajectory_planner

./: CMakeLists.txt  README.md  manifest.xml  roadmap_interpolator.txt
src/: AbstractInterpolator.cpp  AbstractInterpolator.hpp  CMakeLists.txt  TrajectoryPlanner.cpp  TrajectoryPlanner.hpp  TrajectoryPlannerConfig.hpp
src/bezier_curve/: BezierCurve.cpp  BezierCurve.hpp  plot_bezier.py  plot_bezier.py~  readme.txt
src/joints_traj/: .kdev_include_paths  MatrixBaseAddons.h~  Utils.cpp  Utils.hpp  joints_trajectory.cpp  joints_trajectory.hpp  test_interpol.cpp
test/: .kdev_include_paths  CMakeLists.txt  CMakeLists.txt~  acc_bCurve.txt  acc_bCurve.txt~  acc_bCurve0_deriv.txt  acc_bCurve_deriv.txt  acc_bCurve_deriv.txt~  bcoeffs_deriv.txt  bcoeffs_deriv.txt~  joints_limits.txt  joints_limits.txt~  joints_limits1.txt  joints_traj.txt  joints_traj.txt~  output.txt  output.txt~  output2.txt  output3.txt  output4.txt  output5.txt  plot_posversustime.py  plot_posversustime.py~  points.txt  points.txt~  pos_bCurve.txt  pos_bCurve0.txt  test.cpp  test.py  test_joints.cpp  time.txt  traj_plot.py  traj_plot.py~  vel_bCurve.txt  vel_bCurve.txt~  vel_bCurve0_deriv.txt  vel_bCurve_deriv.txt
